tests/NormalTests/paczka2/big_fuzzy/81357900.err
Error in line 6: fnI63kDgc S305 97,87
Error in line 7: Rx1 A847 93,3
Error in line 9: jHS5 A375 16,0
Error in line 11: Rx1 A375 99,8
Error in line 19: jHS5 A847 94,8
Error in line 23: RL87sbA4 S305 38,3
Error in line 34: Rx1 A375 85,8
Error in line 40: fnI63kDgc A847 73,8
Error in line 45: jHSN S30N 8,9
Error in line 47: Rx1 S547 37,6
Error in line 51: Rx1 A375 51,0
Error in line 38: RL87sbA4 A375 10,5
Error in line 60: IDUi3 A847 -1,9
Error in line 44: fnI63kDgc S305 51,3
Error in line 58: RL87sbA4 S305 71,2
Error in line 65: fnI63kDgc A375 34,80
Error in line 64: fnI63kDgc S305 88,0
Error in line 66: fnI63kDgc A375 56,8
Error in line 72: Rx1 A847 118,7
Error in line 73: RL87sbA4 A847 9,4
Error in line 56: jHS5 S305 191,3
Error in line 95: fnI63kDgc S305 27,4
Error in line 97: fnI63kDgc A375 6,6
Error in line 106: jHS5 A375 28,9
Error in line 126: RL87sbA4 S305 4,8
Error in line 143: A847 A375 3,1
Error in line 150: IDUi3 A375 1,3
Error in line 151: IDUi3 A847 2,7
Error in line 164: fnI63kDgc A847 50,0
Error in line 156: Rx1 A847 72,0
Error in line 179: IDUi3 S305 33,3
Error in line 187: RCBC!EstIn A375 260,9
Error in line 192: RL87sbA4 S305 67,6
Error in line 196: Rx1 S305 49,39
Error in line 191: IDUi3 A847 8,9
Error in line 208: IDUi3 A375 9,0
Error in line 206: fnI63kDgc S305 22,5
Error in line 215: RL87sbA4 A847 -1,7
Error in line 211: RCBC1EstIn S547 60,6
Error in line 216: jHS5 A847 36,5
Error in line 214: RL87sbA4 A847 10,8
Error in line 221: IDUi3 S305 49,4
Error in line 230: RL87sbA4 A847 58,3
Error in line 229: A847 A847 72,4
Error in line 232: RL87sbA4 S547 49,4
Error in line 217: RCBC1EstIn A847 12,8
Error in line 218: jHS5 A375 15,6
